--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,18 +63,18 @@ jobs:
         run: |
           mv alist-web/release.sh .
           bash release.sh
-        env:
-          CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID }}
-          CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_PERSONAL_TOKEN }}
+        # env:
+        #   CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID }}
+        #   CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_PERSONAL_TOKEN }}
 
-      - name: Publish npm
-        run: |
-          cd alist-web
-          echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" > ~/.npmrc
-          pnpm publish --no-git-checks
-          cd ..
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      # - name: Publish npm
+      #   run: |
+      #     cd alist-web
+      #     echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" > ~/.npmrc
+      #     pnpm publish --no-git-checks
+      #     cd ..
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Upload dist files
         uses: ad-m/github-push-action@master
