--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: main
-          path: alist-web
+          path: blist-web
           persist-credentials: false
           fetch-depth: 0
           submodules: recursive
@@ -38,7 +38,7 @@ jobs:
       - name: Checkout dist repo
         uses: actions/checkout@v4
         with:
-          repository: alist-org/web-dist
+          repository: loognsss/blist-web
           ref: dev
           path: web-dist
           persist-credentials: false
@@ -46,7 +46,7 @@ jobs:
 
       - name: Build
         run: |
-          cd alist-web
+          cd blist-web
           pnpm install
           pnpm i18n:build
           pnpm build
@@ -59,7 +59,7 @@ jobs:
         run: |
           cd web-dist
           rm -rf dist
-          cp -r ../alist-web/dist .
+          cp -r ../blist-web/dist .
           git add .
           git config --local user.email "i@nn.ci"
           git config --local user.name "Noah Hsu"
@@ -72,5 +72,5 @@ jobs:
           github_token: ${{ secrets.MY_TOKEN }}
           branch: dev
           directory: web-dist
-          repository: alist-org/web-dist
+          repository: loognsss/blist-web
           force: true
