--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Checkout dist repo
         uses: actions/checkout@v4
         with:
-          repository: loognsss/blist-web
+          repository: loognsss/blist-web-dist
           ref: dev
           path: web-dist
           persist-credentials: false
@@ -72,5 +72,5 @@ jobs:
           github_token: ${{ secrets.MY_TOKEN }}
           branch: dev
           directory: web-dist
-          repository: loognsss/blist-web
+          repository: loognsss/blist-web-dist
           force: true
